infra/service-mesh/istio/service-entries.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: vardiya-external-apis
  namespace: vardiya
  labels:
    app.kubernetes.io/part-of: vardiya
spec:
  hosts:
    - api.vardiya.com
    - storage.googleapis.com
    - firebase.googleapis.com
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: vardiya-slack-webhook
  namespace: vardiya
  labels:
    app.kubernetes.io/part-of: vardiya
spec:
  hosts:
    - hooks.slack.com
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: vardiya-smtp
  namespace: vardiya
  labels:
    app.kubernetes.io/part-of: vardiya
spec:
  hosts:
    - smtp.sendgrid.net
  ports:
    - number: 587
      name: smtp
      protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
